website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/guides/markdown-features/markdown-features-intro.mdx
---
id: introduction
description: Docusaurus uses MDX. Find out more about Docusaurus-specific features when writing Markdown.
slug: /markdown-features
---

# Markdown 功能

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus 使用 **[Markdown](https://commonmark.org/)** 作為其主要內容撰寫格式。

:::tip[學習 Markdown]

你可以[在 10 分鐘內學會 Markdown](https://commonmark.org/help/)。

:::

Docusaurus 使用現代化工具幫助你建立**互動式文檔**。

**[MDX](https://mdxjs.com/)** 編譯器會將 **Markdown 檔案轉換為 React 元件**，並允許你在 Markdown 內容中使用 JSX。這讓你能輕鬆地在內容中穿插 React 元件，創造愉悅的學習體驗。

:::tip[使用 MDX 遊樂場]

**[MDX 遊樂場](https://mdxjs.com/playground/)** 是你最好的新朋友！

這是一個非常有助於除錯的工具，能展示 MDX 編譯器如何將 Markdown 轉換為 React。

**選項**：選擇正確的格式（MDX 或 CommonMark）以及 Docusaurus 使用的以下插件：`remark-gfm`、`remark-directive`、`rehype-raw`。

:::

## MDX 與 CommonMark 的比較 {#mdx-vs-commonmark}

Docusaurus 使用 MDX 編譯器將 `.md` 和 `.mdx` 檔案編譯為 React 元件，但**語法的解釋方式可能因設定而異**。

MDX 編譯器支援[兩種格式](https://mdxjs.com/packages/mdx/#optionsformat)：

- [MDX 格式](https://mdxjs.com/docs/what-is-mdx/)：一個強大的解析器，允許使用 JSX
- [CommonMark 格式](https://commonmark.org/)：一個符合標準的 Markdown 解析器，不允許使用 JSX

預設情況下，**Docusaurus v3 出於歷史原因對所有檔案（包括 `.md` 檔案）使用 MDX 格式**。

你可以透過 [`siteConfig.markdown.format`](../../api/docusaurus.config.js.mdx#markdown) 設定或 `mdx.format: md` 前置資料**選擇使用 CommonMark**。

:::tip[如何使用 CommonMark]

如果你計劃使用 CommonMark，我們推薦 [`siteConfig.markdown.format: 'detect'`](../../api/docusaurus.config.js.mdx#markdown) 設定。系統會根據檔案副檔名自動選擇適當的格式：

- `.md` 檔案將使用 CommonMark 格式
- `.mdx` 檔案將使用 MDX 格式

:::

## 標準功能 {#standard-features}

Markdown 是一種語法，讓你能以易讀的格式撰寫格式化內容。

```md
### My Doc Section

Hello world message with some **bold** text, some _italic_ text, and a [link](/)

![img alt](/img/docusaurus.png)
```

```mdx-code-block
<BrowserWindow>

<h3>My Doc Section</h3>

Hello world message with some **bold** text, some _italic_ text and a [link](/)

![img alt](/img/docusaurus.png)

</BrowserWindow>
```

<details>

<summary>Markdown is declarative</summary>

Some may assume a 1-1 correlation between Markdown and HTML, e.g., `![Preview](/img/docusaurus.png)` will always become `<img src="/img/docusaurus.png" alt="Preview" />`, as-is. However, _that is not the case_.

The Markdown syntax `![message](url)` only declaratively tells Docusaurus that an image needs to be inserted here, but we may do other things like transforming a [file path to URL path](./markdown-features-assets.mdx#images), so the generated markup may differ from the output of other Markdown renderers, or a naïve hand-transcription to the equivalent JSX/HTML code.

In general, you should only assume the _semantics_ of the markup (` ``` ` fences become [code blocks](./markdown-features-code-blocks.mdx); `>` becomes [quotes](#quotes), etc.), but not the actual compiled output.

</details>

## 前置資料 {#front-matter}

前置資料用於為你的 Markdown 檔案添加元數據。所有內容插件都有自己的前置資料結構，並使用前置資料來豐富從內容或其他配置推斷出的預設元數據。

前置資料位於檔案的最頂部，由三個破折號 `---` 包圍。內容以 [YAML](https://yaml.org/spec/1.2.2/) 格式解析。

```md
---
title: My Doc Title
more_data:
  - Can be provided
  - as: objects
    or: arrays
---
```

:::info

每個官方插件的 API 文檔列出了支援的屬性：

- [文檔前置資料](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)
- [部落格前置資料](../../api/plugins/plugin-content-blog.mdx#markdown-front-matter)
- [頁面前置資料](../../api/plugins/plugin-content-pages.mdx#markdown-front-matter)

:::

## 引用 {#quotes}

Markdown 引用經過精美樣式設計：

```md
> Easy to maintain open source documentation websites.
>
> — Docusaurus
```

<BrowserWindow>

> Easy to maintain open source documentation websites.
>
> — Docusaurus

</BrowserWindow>

## 詳細資訊 {#details}

Markdown 可以嵌入 HTML 元素，而 [`details`](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/details) HTML 元素經過精心設計後呈現美觀樣式：

```md
### Details element example

<details>
  <summary>Toggle me!</summary>
  <div>
    <div>This is the detailed content</div>
    <br/>
    <details>
      <summary>
        Nested toggle! Some surprise inside...
      </summary>
      <div>😲😲😲😲😲</div>
    </details>
  </div>
</details>
```

```mdx-code-block
<BrowserWindow>

<h3>Details element example</h3>

<details>
  <summary>Toggle me!</summary>
  <div>
    <div>This is the detailed content</div>
    <br/>
    <details>
      <summary>
        Nested toggle! Some surprise inside...
      </summary>
      <div>😲😲😲😲😲</div>
    </details>
  </div>
</details>

</BrowserWindow>
```